fixed overflow for code in topic card

--- a/src/styles/components/TopicCard.css
+++ b/src/styles/components/TopicCard.css
@@ -64,6 +64,10 @@
   main {
     grid-area: main;
     @apply text-sm px-2;
+
+    code {
+      @apply overflow-auto;
+    }
   }
 
   footer {
